# project_daily_digest

./: .gitignore  README.md  dd_content.py  dd_email.py  dd_gui.py  dd_scheduler.py  pyproject.toml  quotes.csv
